data/all_generated_tests/raw_wast_tests/loop_StackCorruption_360.wast
;; 1. **Test Description:**    - Check a simple loop initiation with integer operations that pushes and pops values on a stack.    - **Constraint Checked:** Ensure that loop initialization correctly handles stack height before entering the loop.    - **Relation to Stack Corruption:** Check for underflow/overflow conditions when entering and exiting the loop.    ```wasm    (module      (func (export "test") (result i32)        (local i32)        i32.const 0        loop (result i32)          (local.get 0)          i32.const 1          i32.add          i32.const 10          i32.ne          br_if 0        end)      (drop)    )    ```

(assert_invalid
  (module (func (export "test") (result i32)
    (local i32)
    i32.const 0
    loop (result i32)
      (local.get 0)
      i32.const 1
      i32.add
      i32.const 10
      i32.ne
      br_if 0
    end
    (drop)
  ))
  "type mismatch"
)